# LitchiEngine

./: .gitattributes  .gitignore  CMakeLists.txt  GenerateProjects_CMake.bat  README.md
Engine/: CMakeLists.txt
Engine/Assets/: ProjectConfig.Litchi
Engine/Assets/Config/: layout.ini
Engine/Assets/Engine/Materials/: Default.mat  Default4Skinned.mat  DefaultLady.mat  DefaultUnlit.mat  PBRPistol.mat  Standard4Phong.mat  StandardSkinn4Phong.mat  UIText.mat  rp_sophia.mat  test.mat
Engine/Assets/Engine/Models/: LadyCat.fbx  Standing Torch Walk Left.fbx
Engine/Assets/Engine/Shaders/: Standard.glsl  Standard4Skinned.glsl  UIStandard.glsl  forward.hlsl  imgui.hlsl  line.hlsl  test.hlsl
Engine/Assets/Engine/Shaders/Common/: common.hlsl  common_buffers.hlsl  common_textures.hlsl  common_vertex_pixel.hlsl  depth_light.hlsl  shadow_mapping.hlsl
Engine/Assets/Engine/Shaders/Forward/: Standard.hlsl  Standard4Phong.hlsl  Standard_Fake.hlsl  Standard_Image.hlsl  Standard_Skin.hlsl  Standard_Text.hlsl
Engine/Assets/Scenes/: New Scene Empty.scene  New Scene.scene  New Scene4.scene
Engine/Assets/Showroom/: Showroom.ovproject
Engine/Assets/Showroom/Assets/Meshes/: SubdivPlane.fbx  vplane.fbx
Engine/Assets/Showroom/Assets/Scenes/: Island.ovscene  PBR.ovscene  Sponza.ovscene
Engine/Assets/Showroom/Assets/Shaders/: CameraFade.glsl  Curtain.glsl  FloatingParticles.glsl  NightSky.glsl  Water.glsl
Engine/Assets/Showroom/Scripts/: Animation_Floating.lua  BounceSound.lua  DemoLightRotation.lua  OrbitalRotor.lua  OrbitalRotorInverse.lua  RotateOverTime.lua  SimpleFPSController.lua  SponzaExplorer.lua  Teleport.lua
Engine/Assets/data/shaders/: common.hlsl  common_buffers.hlsl  common_structs.hlsl  common_textures.hlsl  forward.hlsl  imgui.hlsl  line.hlsl  test.hlsl
Engine/Assets/material/: Blinn Pistol.ovmat  Default.mat  DefaultUnlit.mat  PBR Pistol.ovmat  PBRPistol.mat  materialTemplete.mat  materialTemplete2.mat
Engine/Assets/shader/: DepthShader.glsl  Standard.glsl
Engine/Config/: layout.ini
Engine/Data/Engine/Materials/: PBRTest.mat  Standard.mat  Standard4Phong.mat  Standard4Phong4Liuyifu.mat  StandardSkin.mat  StandardSkinn4Phong.mat  UIImage.mat  UIText.mat  rp_sophia.mat
Engine/Data/Engine/Shaders/: DepthShader4Skinned.glsl  Standard4Skinned.glsl  UITextStandard.glsl  depth_light.hlsl  depth_light_skin.hlsl  forward.hlsl  grid.hlsl  line.hlsl  quad.hlsl  skyBox.hlsl
Engine/Data/Engine/Shaders/Common/: common.hlsl  common_buffers.hlsl  common_colorspace.hlsl  common_light.hlsl  common_samplers.hlsl  common_structs.hlsl  common_textures.hlsl  shadow_mapping.hlsl
Engine/Data/Engine/Shaders/Forward/: Standard.hlsl  Standard_Fake.hlsl  Standard_Image.hlsl  Standard_Skin.hlsl  Standard_Text.hlsl
Engine/Data/Engine/Textures/: no_texture.texture
Engine/Data/Engine/Textures/SkyBoxCubeMap4HDR/: py.hdr
Engine/Source/Editor/: CMakeLists.txt
Engine/Source/Editor/include/: ApplicationEditor.h  application_editor.h  axis.h  login_scene.h
Engine/Source/Editor/include/Core/: CameraController.h  EditorActions.h  EditorActions.inl  EditorRenderer.h  EditorResources.h  GizmoBehaviour.h  PanelsManager.h
Engine/Source/Editor/include/Menus/: ActorCreationMenu.h
Engine/Source/Editor/include/Panels/: AView.h  AViewControllable.h  AssetBrowser.h  AssetProperties.h  AssetView.h  Console.h  GameView.h  Hierarchy.h  Inspector.h  MaterialEditor.h  MenuBar.h  Profiler.h  ProjectHubPanel.h  ProjectSettings.h  SceneView.h  Toolbar.h
Engine/Source/Editor/include/Resources/: RawShaders.h  RawTextures.h
Engine/Source/Editor/source/: ApplicationEditor.cpp  application_editor.cpp  login_scene.cpp  main.cpp
Engine/Source/Editor/source/Core/: CameraController.cpp  EditorActions.cpp  EditorRenderer.cpp  EditorResources.cpp  GizmoBehaviour.cpp  (+1 more)
Engine/Source/Runtime/: CMakeLists.txt  CMakeLists.txt.glfw
Engine/Source/Runtime/Core/: Application.cpp  Application.h  Definitions.h  main.cpp  pch.cpp  pch.h
Engine/Source/Runtime/Resource/: AResourceManager.h  AResourceManager.inl  AssetManager.cpp  AssetManager.h  ConfigManager.cpp  ConfigManager.h  FontManager.cpp  FontManager.h  MaterialManager.cpp  MaterialManager.h  ModelManager.cpp  ModelManager.h  PrefabManager.cpp  PrefabManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h  asset_manager.cpp  asset_manager.h  config_manager.cpp
Engine/Source/Runtime/Test/: ShaderSource.h  VertexData.h
Engine/Source/ScriptCore/: CMakeLists.txt
Engine/Source/ScriptCore/Source/: Input.cs  InternalCalls.cs  KeyCode.cs  Vector2.cs  Vector3.cs
Engine/Source/Standalone/: CMakeLists.txt
Engine/Source/Standalone/include/: ApplicationStandalone.h
Engine/Source/Standalone/source/: ApplicationStandalone.cpp  main.cpp
Engine/ThirdParty(new)/: CMakeLists.txt
Engine/ThirdParty(new)/PhysX/: .gitignore  CMakeLists.txt  README.md  emscripten.sh
Engine/ThirdParty(new)/PhysX/LowLevelParticles/: CMakeLists.txt
Engine/ThirdParty(new)/PhysX/PsFastXml/: CMakeLists.txt
Engine/ThirdParty(new)/PhysX/PxFoundation/: CMakeLists.txt
Engine/ThirdParty(new)/PhysX/PxPvdSDK/: CMakeLists.txt
Engine/ThirdParty(new)/PhysX/PxTask/: CMakeLists.txt
Engine/ThirdParty(new)/PhysX/Snippets/: CMakeLists.txt
Engine/ThirdParty(new)/assimp/: CMakeLists.txt
Engine/ThirdParty(new)/dxcompiler/cmake/: build.cmake  default_target_settings.cmake
Engine/ThirdParty(new)/easy_profiler/: CMakeLists.txt
Engine/ThirdParty(new)/glfw/: CMakeLists.txt
Engine/ThirdParty(new)/spdlog/: CMakeLists.txt
Engine/ThridParty/: CMakeLists.txt
Engine/ThridParty/dxc/lib/: dxcompiler.lib
Engine/ThridParty/freetype-windows-binaries-master/: CHANGES.txt  README.md
Engine/ThridParty/freetype/objs/: freetype.dll.recipe  freetype.exp  freetype.ilk  freetype.lib
Engine/ThridParty/glm-release/: CMakeLists.txt
Engine/ThridParty/glm-release/glm/: CMakeLists.txt
Engine/ThridParty/physx-4.1/: CMakeLists.txt
Engine/ThridParty/rttr/rttr/: CMakeLists.txt
Engine/ThridParty/spirv_cross/lib/: spirv-cross-core.lib
Engine/ThridParty/stb/: stb_c_lexer.h
(+807 files in other folders)
